# sempiterno-group-rpa-contabot-conciliacion-bancaria

./: .gitignore  @AutomationLog.txt  README.md  pyproject.toml
config/: config.ini
scripts/: run.bat
src/contabot_conciliacion_bancaria/: __init__.py  __main__.py  logger.py  paths.py  types.py
src/contabot_conciliacion_bancaria/excel_reader/: models.py
src/contabot_conciliacion_bancaria/notification/: models.py
src/contabot_conciliacion_bancaria/path_reader/app/: get_files_to_process.py  read_dir.py
src/contabot_conciliacion_bancaria/path_reader/domain/: factory.py  models.py
src/contabot_conciliacion_bancaria/path_reader/infrastructure/: get_files_input_to_process.py  read_dirs.py
src/contabot_conciliacion_bancaria/process/: commands.py  constants.py
src/contabot_conciliacion_bancaria/process/conciliacion/: types.py
src/contabot_conciliacion_bancaria/process/conciliacion/app/: comisiones.py  cuenta_contable.py  factory.py  header.py  schema_overides.py  uses_case.py
src/contabot_conciliacion_bancaria/process/conciliacion/infrastructure/: repositories.py
src/contabot_conciliacion_bancaria/process/shared/: types.py
src/contabot_conciliacion_bancaria/process/shared/app/: readers.py  use_cases.py
src/contabot_conciliacion_bancaria/process/shared/domain/: models.py  repositories.py
src/contabot_conciliacion_bancaria/processor/: concrete_strategies.py  factory.py  strategy.py
src/contabot_conciliacion_bancaria/utils/: filter.py  manager.py  report.py  safe_date_col.py  slice.py
tests/: test_excel.py
(+5 files in other folders)
