[project]
name = "contabot-conciliacion-bancaria"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "merzamac", email = "100945727+merzamac@users.noreply.github.com"},
]
dependencies = ["loguru>=0.7.3", "dateparser>=1.2.2", "fastexcel>=0.16.0", "polars>=1.35.1", "openpyxl>=3.1.5", "types-openpyxl>=3.1.5.20250919", "aconsys @ git+https://github.com/merzamac/pyaconsys.git"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "\"\""}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
[tool.pyrefly]
search_path = [
    "src/contabot_conciliacion_bancaria",
]